--- a/app/views/shared/_sitenav.html.erb
+++ b/app/views/shared/_sitenav.html.erb
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li><%= link_to "Home", root_path %></li>
-    <li><%= link_to "About us", root_path  %></li>
-    <li><%= link_to "Contact", root_path %></li>
+    <li><%= link_to "About us", about_show_path  %></li>
+    <li><%= link_to "Contact", contact_show_path %></li>
   </ul>
 </nav>
