--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -52,6 +52,7 @@ body {
             float: left;
             margin: 0;
             padding: 0;
+            border-bottom:2px solid;
 
             a {
               transition:0.5s;
