added search input and button to the view

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,7 @@
-  <div id="logo">
-    <%= image_tag "mylogo.png" %>
-  </div>
+<div id="logo">
+	<%= image_tag "mylogo.png" %>
+</div>
+<div id='search'>
+    <%= text_field_tag :search_keywords %>
+    <%= submit_tag 'Search' %>
+</div>
