--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -34,6 +34,14 @@ body {
 		
 		#banner {
 			margin-left: 20px;
+
+      #search {
+        float: right;
+        margin-right: 25px;
+        margin-top: -100px;
+        margin-bottom: 0px;
+        padding: 0px;
+      }
 		}
 
 		#sitenav {
@@ -74,44 +82,47 @@ body {
               padding: 9px 15px 0;
               font-weight: normal;
             }
+            
+            ul {
+              visibility: hidden;
+              position: absolute;
+              background: #000;
+              padding: 0;
+              left: 110px;
+              top: 100%;
+              transition: margin .1s, opacity .15s;
+
+              li {
+                float: none; 
+                position: relative;
+                margin: 0;
+
+                a {
+                  padding: 15px 40px;
+                  color: #A79787;
+                  height: 10px;
+                  padding: 12px 15px;
+                }
+              }
+              li:hover a {
+                color: #fff;
+                background-color: #00F;
+              }
+            }
           }
           li:hover{
             text-decoration: none;
             border-bottom: 2px solid #00F;
 
             > ul {
+              display: block;
               visibility: visible;
             }
           }
           li:hover a {
             color: #fff;
           }
-          ul {
-            visibility: hidden;
-            position: absolute;
-            background: #000;
-            padding: 0;
-            left: 110px;
-            top: 100%;
-            transition: margin .15s, opacity .15s;
-
-            li {
-              float: none; 
-              position: relative;
-              margin: 0;
-
-              a {
-                padding: 15px 40px;
-                color: #A79787;
-                height: 10px;
-                padding: 12px 15px;
-              }
-            }
-            li:hover a {
-              color: #fff;
-              background-color: #00F;
-            }
-          }
+          
 				}
         ul:before {
           content: "";
