--- a/app/views/shared/_sitenav.html.erb
+++ b/app/views/shared/_sitenav.html.erb
@@ -1,12 +1,13 @@
 <nav>
   <ul>
     <li><%= link_to "Home", root_path %></li>
-    <li><a>Category</a></li>
+    <li><a>Category</a>
         <ul class="nav_child">
             <li><%= link_to "Movie Series", category_path(1) %></li>
             <li><%= link_to "T.V. Series", category_path(2) %></li>
             <li><%= link_to "Manga", category_path(3) %></li>
         </ul>
+    </li>
     <li><%= link_to "About us", about_show_path  %></li>
     <li><%= link_to "Contact", contact_show_path %></li>
   </ul>
