--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,6 +2,8 @@
 	<%= image_tag "mylogo.png" %>
 </div>
 <div id='search'>
-    <%= text_field_tag :search_keywords %>
-    <%= submit_tag 'Search' %>
+	<%= form_tag search_results_path, method: :get do %>
+        <%= text_field_tag :search_keywords %>
+        <%= submit_tag 'Search' %>
+    <% end %>
 </div>
