--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -83,7 +83,7 @@ body {
               font-weight: normal;
             }
             
-            ul {
+            .nav_child {
               visibility: hidden;
               position: absolute;
               background: #000;
@@ -95,6 +95,32 @@ body {
                 float: none; 
                 position: relative;
                 margin: 0;
+
+                a {
+                  padding: 15px 40px;
+                  color: #A79787;
+                  height: 10px;
+                  padding: 12px 15px;
+                }
+              }
+              li:hover a {
+                color: #fff;
+                background-color: #00F;
+              }
+            }
+            .nav_sec_child {
+              visibility: hidden;
+              position: absolute;
+              background: #000;
+              padding: 0;
+              left: 220px;
+              top: 100%;
+
+              li {
+                float: none; 
+                position: relative;
+                margin: 0;
+                display: block;
 
                 a {
                   padding: 15px 40px;
@@ -132,7 +158,6 @@ body {
           display: table;
           clear: both;
         }
-
 			}
 		}
 		#sitenav:before {
