added Price descending filter

--- a/app/views/shared/_sitenav.html.erb
+++ b/app/views/shared/_sitenav.html.erb
@@ -13,6 +13,7 @@
             <li><%= link_to "New", new_products_path %></li>
             <li><%= link_to "On Sale", on_sale_path %></li>
             <li><%= link_to "Price asc", by_price_asc_path %></li>
+            <li><%= link_to "Price desc", by_price_desc_path %></li>
         </ul>
     </li>
     <li><%= link_to "About us", about_show_path  %></li>
