--- a/app/views/shared/_sitenav.html.erb
+++ b/app/views/shared/_sitenav.html.erb
@@ -14,6 +14,7 @@
             <li><%= link_to "On Sale", on_sale_path %></li>
             <li><%= link_to "Price asc", by_price_asc_path %></li>
             <li><%= link_to "Price desc", by_price_desc_path %></li>
+            <li><%= link_to "Name A-Z", by_name_asc_path %></li>
         </ul>
     </li>
     <li><%= link_to "About us", about_show_path  %></li>
