added Name Z-A filter

--- a/app/views/shared/_sitenav.html.erb
+++ b/app/views/shared/_sitenav.html.erb
@@ -15,6 +15,7 @@
             <li><%= link_to "Price asc", by_price_asc_path %></li>
             <li><%= link_to "Price desc", by_price_desc_path %></li>
             <li><%= link_to "Name A-Z", by_name_asc_path %></li>
+            <li><%= link_to "Name Z-A", by_name_desc_path %></li>
         </ul>
     </li>
     <li><%= link_to "About us", about_show_path  %></li>
