fixed output of by category

--- a/app/views/shared/_sitenav.html.erb
+++ b/app/views/shared/_sitenav.html.erb
@@ -3,9 +3,9 @@
     <li><%= link_to "Home", root_path %></li>
     <li><a>Category</a>
         <ul class="nav_child">
-            <li><%= link_to "Movie Series", category_path(1) %></li>
-            <li><%= link_to "T.V. Series", category_path(2) %></li>
-            <li><%= link_to "Manga", category_path(3) %></li>
+            <li><%= link_to "Movie Series", by_category_path(1) %></li>
+            <li><%= link_to "T.V. Series", by_category_path(2) %></li>
+            <li><%= link_to "Manga", by_category_path(3) %></li>
         </ul>
     </li>
     <li><a>Products</a>
